@@ -1,3 +1,4 @@
+* Use accounting date to format invoice number
 * Add invoice payment method
 * Show number and reference in invoice rec_name
 * Remove support for Python 2.7
